--- a/test/etc/followup.conf
+++ b/test/etc/followup.conf
@@ -39,3 +39,4 @@ twilight = nautical
 [scheduler]
 # time resolution for the schedule, in seconds
 time_resolution = 3600
+proposals = GWFollowup WideFastDeep
