Consistently use correct nomenclature for exposures and visits

--- a/etc/events.conf
+++ b/etc/events.conf
@@ -1,6 +1,7 @@
 [astrophysical]
 # rate in events per Gpc^3 per year
 rate = 1.5e3
+#rate = 15
 
 [survey]
 # volume in Gpc^3
@@ -14,5 +15,5 @@ min_mjd = 59580
 max_mjd = 63230
 
 [simulation]
-episodes = 5
+episodes = 1
 npseed = 6563
