Include shutter open and close time

--- a/etc/followup.conf
+++ b/etc/followup.conf
@@ -20,6 +20,9 @@ filter_change_time = 120
 # readout time in seconds
 readout_time = 2
 
+# Shutter open/close time in seconds
+shutter_time = 1
+
 [obs_block]
 # number of exposures per block
 nexp = 2
