--- a/test/etc/followup.conf
+++ b/test/etc/followup.conf
@@ -12,13 +12,16 @@ trigger_delay = 600
 
 [instrument]
 # slew_rate is in units of deg/sec
-slew_rate = 1.0
+slew_rate = 0.6
 
 # filter_change_time in seconds
 filter_change_time = 120
 
 # readout time in seconds
-readout_time = 3
+readout_time = 2
+
+# Shutter open/close time in seconds
+shutter_time = 1
 
 [obs_block]
 # number of exposures per block
