expand documentation in comments

--- a/etc/followup.conf
+++ b/etc/followup.conf
@@ -4,10 +4,18 @@ name = Cerro Pachon
 [search]
 #Search area in square degrees
 area = 60.0
+#area = 1000.0
 
 bands = g i
 
-# delay between event and trigger, in seconds
+# trigger_delay is the minimum time between the actual time of the
+# event and the earliest open shutter time of the first followup
+# exposure. So, if trigger_delay is 2 seconds, it means we can open
+# the shutter on the first followup exposure 2 seconds after the event
+# itself. In practical terms, it sets the time difference between the
+# start of the “rise time” window in which owsim tries to get two
+# coverages, and time owsim will schedule the first followup.
+
 trigger_delay = 600
 
 [instrument]
@@ -40,6 +48,30 @@ max_airmass = 2.5
 twilight = nautical
 
 [scheduler]
-# time resolution for the schedule, in seconds
+# time_resolution sets how owsim searches for times at which it can
+# schedule exposures: if owsim wants to schedule an exposure for
+# time t, but finds none of the desired fields are available (for
+# example because they are all at too high an airmass), it skips ahead
+# time_resolution and tries again. Looking in the owsim code, I
+# see a bug: it reads time_resolutiony from the config file, and the
+# immediately sets it to 1 hour, overriding whatever was read. This is
+# clearly wrong, and I’ve made the fix on my local copy. When I’ve
+# tested it, I’ll push the patch to github.
+
 time_resolution = 3600
-proposals = GWFollowup WideFastDeep
+
+
+# In the opsim database, each exposure corresponds to one or more
+# programs — the science programs that that exposure counts
+# towards. So, someone doing analysis on, say, just WideFastDeep
+# exposures can select on that to get only exposures that are part of
+# that program, and similarly for GalacticPlane or
+# NorthEclipticSpur. A given exposure can contribute to multiple
+# programs. If you set proposals to GWFollowup WideFastDeep in the
+# config file, then any followup exposures will be returned when
+# exposures for either the GWFollowup or WideFastDeep are queried
+# for. If it’s just GWFollowup, then the exposures will *not* be be
+# included when WideFastDeep exposures are queried for.
+
+#proposals = GWFollowup WideFastDeep
+proposals = GWFollowup
