--- a/etc/followup.conf
+++ b/etc/followup.conf
@@ -52,12 +52,7 @@ twilight = nautical
 # schedule exposures: if owsim wants to schedule an exposure for
 # time t, but finds none of the desired fields are available (for
 # example because they are all at too high an airmass), it skips ahead
-# time_resolution and tries again. Looking in the owsim code, I
-# see a bug: it reads time_resolutiony from the config file, and the
-# immediately sets it to 1 hour, overriding whatever was read. This is
-# clearly wrong, and I’ve made the fix on my local copy. When I’ve
-# tested it, I’ll push the patch to github.
-
+# time_resolution and tries again.
 time_resolution = 3600
 
 
