modifications to use version of lsst code in cvmfs

--- a/etc/events.conf
+++ b/etc/events.conf
@@ -1,7 +1,7 @@
 [astrophysical]
 # rate in events per Gpc^3 per year
-rate = 1.5e3
-#rate = 15
+#rate = 1.5e3
+rate = 150
 
 [survey]
 # volume in Gpc^3
