--- a/etc/followup.conf
+++ b/etc/followup.conf
@@ -13,7 +13,7 @@ bands = g i
 # exposure. So, if trigger_delay is 2 seconds, it means we can open
 # the shutter on the first followup exposure 2 seconds after the event
 # itself. In practical terms, it sets the time difference between the
-# start of the “rise time” window in which owsim tries to get two
+# start of the rise time window in which owsim tries to get two
 # coverages, and time owsim will schedule the first followup.
 
 trigger_delay = 600
@@ -57,7 +57,7 @@ time_resolution = 3600
 
 
 # In the opsim database, each exposure corresponds to one or more
-# programs — the science programs that that exposure counts
+# programs: the science programs that that exposure counts
 # towards. So, someone doing analysis on, say, just WideFastDeep
 # exposures can select on that to get only exposures that are part of
 # that program, and similarly for GalacticPlane or
@@ -65,7 +65,7 @@ time_resolution = 3600
 # programs. If you set proposals to GWFollowup WideFastDeep in the
 # config file, then any followup exposures will be returned when
 # exposures for either the GWFollowup or WideFastDeep are queried
-# for. If it’s just GWFollowup, then the exposures will *not* be be
+# for. If its just GWFollowup, then the exposures will *not* be be
 # included when WideFastDeep exposures are queried for.
 
 #proposals = GWFollowup WideFastDeep
